--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,15 +1,20 @@
 <div class="banner">
   <h1 class="welcome">Welcome to Mister Cocktails</h1>
+  <h4><%= link_to "Add cocktail", new_cocktail_path %></h4>
 </div>
 
-<div class="container">
-  <div class="row">
-        <% @cocktails.each do |cocktail| %>
-        <div class="card col-3">
-          <span><h5 class="card-title"><%= link_to cocktail.name, cocktail_path(cocktail) %></h5> </span>
-        </div>
-      <% end %>
-    </div>
+<div class="cards-container">
+    <% @cocktails.each do |cocktail| %>
+      <div class="card">
+        <span><h5 class="card-title"><%= link_to cocktail.name, cocktail_path(cocktail) %></h5> </span>
+      </div>
+    <% end %>
 </div>
 
 
+<div class="cards-container">
+  <!-- display flex justify-content center -->
+  <div class="cards">
+    <!-- put your css grid here -->
+  </div>
+</div>
