--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -2,14 +2,15 @@
   <h1>Add a cocktail</h1>
 </div>
 
-<div class="cocktail-card">
-  <%= form_for(@cocktail) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-
+<!-- <div class="cocktail-card"> -->
+  <%= simple_form_for(@cocktail) do |f| %>
+  <%= f.input :name, label: "Insert name:" %>
+  <%= f.input :photo  %>
+  <%= f.input :photo_cache, as: :hidden %>
   <%= f.submit %>
 <% end %>
-</div>
+<!-- </div> -->
 
 
 <%= render "shared/background" %>
+
