--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+
 body {
-  background-color:  #AEE5D8;
+  background-color: #505168;
 }
