--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -8,13 +8,22 @@
 
 .card {
   width: 200px;
-  height: 200px;
-  margin: 5px;
+  height: 300px;
+  margin: 10px;
   display: flex;
-  background-image: asset-url('cocktail-pic.jpg');
   background-size: cover;
   position: relative;
+  box-shadow: 1px 1px;
 }
+
+.card img {
+  border: 3px solid white;
+  background:
+      /* top, transparent red, faked with gradient */
+      linear-gradient(
+        rgba(255, 0, 0, 0.45),
+        rgba(255, 0, 0, 0.45)),
+    }
 
 .card span {
   position: absolute;
@@ -36,6 +45,9 @@
 
 .card-title {
   vertical-align: bottom;
+  a {
+    color: #F5CB5C;
+  }
 }
 
 .cocktail-card {
@@ -45,19 +57,32 @@
   margin-top: 20px;
 }
 
-.cocktail-card p{
-  color: white;
-  padding-right: 10px;
+.cocktail-card-home-delete {
+  display: flex;
+  line-height: 40px;
+  height: 40px;
+  text-align: center;
+  margin-top: 20px;
+  a {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+  }
 }
 
-.cocktail-card a {
-  padding-left: 10px;
+.cocktail-card-home-delete {
+  justify-content: center;
 }
 
 .cocktail-mini-card {
   line-height: 30px;
   height: 30px;
   text-align: center;
+  display: flex;
+  p {
+    padding-right: 25px;
+    color: white;
+  }
 }
 
 .add-cocktail-div {
@@ -66,12 +91,35 @@
   margin-top: 20px;
 }
 
-.cocktail-image-card {
-  height: 300px;
+.cocktail-show-container {
   margin: 0 auto;
+}
+
+.cocktail-image-card {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
   img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    border: 2px solid white;
+    box-shadow: 1px 1px 1px;
+    border-radius: 5px;
+  }
+}
+
+.card h5 {
+  text-shadow: 1px 1px 2px pink;
+}
+
+.cocktail-show-container {
+  display: flex;
+  width: 600px;
+  margin: 0 auto;
+}
+
+.cocktail-info-card {
+  margin-left: 20px;
+  h3 {
+    color: #F5CB5C;
+    text-shadow: 1px 1px 1px white;
   }
 }
