--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -3,11 +3,20 @@
   height: 100px;
   text-align: center;
   padding-top: 10px;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
   color: white;
 }
 
-.body-div {
-  background-color: #AEE5D8;
+
+
+.banner h1 {
+  text-shadow: 1px 1px 2px pink;
 }
 
+
+#add-cocktail a {
+  color: #F5CB5C;
+  text-shadow: 1px 1px 1px white;
+}
 
