--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,34 +3,42 @@
     <h1 class="welcome"><%= @cocktail.name %></h1>
   </div>
 
+
+<div class="cocktail-show-container">
+
 <div class="cocktail-image-card">
-  <%= cl_image_tag @cocktail.photo, width: 300, height: 300 %>
+  <%= cl_image_tag @cocktail.photo, width: 250, height: 350, crop: :scale %>
+
+    <div class="cocktail-card-home-delete">
+     <h5><%= link_to "Home", cocktails_path %></h5>
+      <h5><%= link_to cocktail_path, method: :delete do %><i class="far fa-trash-alt"></i><% end %></h5>
+    </div>
 </div>
 
-<div class="cocktail-card">
-  <% @cocktail.doses.each do |dose| %>
-  <div class="cocktail-mini-card">
-    <%= dose.description %>
-    <%= link_to "Delete dose", delete_path(dose), method: :delete %>
-    <i class="far fa-trash-alt"></i>
-  </div>
-  <% end %>
-</div>
+<div class="cocktail-info-card">
 
+  <h3><strong><em>Cocktail Doses</em></strong></h3>
 
-<div class="cocktail-card">
-   <button type="button" class="btn btn-primary">
-    <%= link_to "Add dose", new_cocktail_dose_path(@cocktail) %>
+  <div class="cocktail-card">
+    <button type="button" class="btn btn-primary">
+      <%= link_to "Add dose", new_cocktail_dose_path(@cocktail) %>
     </button>
+  </div>
+
+  <div class="cocktail-card">
+    <% @cocktail.doses.each do |dose| %>
+    <div class="cocktail-mini-card">
+      <p><%= dose.description %></p>
+      <p><%= link_to delete_path(dose.id), method: :delete do %><i class="far fa-trash-alt"></i><% end %></p>
+    </div>
+    <% end %>
+  </div>
+
 </div>
 
-<div class="cocktail-card">
-  <h5><%= link_to "Home", cocktails_path %></h5>
+
 </div>
 
-<div class="cocktail-card">
-  <h5><%= link_to "Delete", cocktail_path, method: :delete %></h5>
-</div>
 
 </div>
 
